# vndb-api

./: .gitignore  Cargo.toml  README.md
examples/authinfo/: Cargo.toml
examples/authinfo/src/: main.rs
examples/character/: Cargo.toml
examples/character/src/: main.rs
examples/producer/: Cargo.toml
examples/producer/src/: main.rs
examples/release/: Cargo.toml
examples/release/src/: main.rs
examples/rlist/: Cargo.toml
examples/rlist/src/: main.rs
examples/staff/: Cargo.toml
examples/staff/src/: main.rs
examples/stats/: Cargo.toml
examples/stats/src/: main.rs
examples/tag/: Cargo.toml
examples/tag/src/: main.rs
examples/traits/: Cargo.toml
examples/traits/src/: main.rs
examples/ulist/: Cargo.toml
examples/ulist/src/: main.rs
examples/user/: Cargo.toml
examples/user/src/: main.rs
examples/vn/: Cargo.toml
examples/vn/src/: main.rs
src/: client.rs  lib.rs
src/format/: auth.rs  character.rs  error.rs  mod.rs  producer.rs  release.rs  rlist.rs  schema.rs  staff.rs  stats.rs  tag.rs  traits.rs  ulist.rs  user.rs  vn.rs
src/request/: query.rs  response.rs
