[package]
name = "vndb-api"
version = "1.0.2"
edition = "2021"
authors = ["demeil1 https://github.com/demeil1"]
license = "MIT"
repository = "https://github.com/demeil1/vndb-api"
description = "Fully Functional Visual Novel Database (VNDB) HTTPS API Wrapper"
keywords = ["vndb", "visualnovel", "api", "vn", "anime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [".env"]

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "macros"] }
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.0"
serde_repr = "0.1.19"
