[package]
name = "ulist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vndb-api = { path = "../../" }
dotenvy = "0.15"
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"